--- a/views/phonenumbers.html
+++ b/views/phonenumbers.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>dropdown</title>
+  <title>Phone Numbers</title>
+  <script src="../scripts/phonenumbers.js"></script>
   <style>
     .number-input {
       display: inline-block;
@@ -113,8 +114,5 @@
     </div>
   </div>
 
-
-
-<script src="../scripts/phonenumbers.js"></script>
 </body>
 </html>
